--- a/config.yaml
+++ b/config.yaml
@@ -28,15 +28,22 @@ taxonomies:
   # Filter taxonomies entries.
   entry_filter: {category: Uncategorized}
   # Rename taxonomies when writing jekyll output format.
-  name_mapping: {category: categories, post_tag: tags}
+  name_mapping: {category: tags, }
 
 # Replace certain patterns in body
 # Simply replace the key with its value
 body_replace: {
-  # '<pre.*?lang="(.*?)".*?>': '\n{% codeblock \1 lang:\1 %}\n',
-  # '<pre.*?>': '\n{% codeblock %}\n',
-  # '</pre>': '\n{% endcodeblock %}\n',
-
+#   '<pre.*?lang="(.*?)".*?>': '\n{% codeblock \1 lang:\1 %}\n',
+#   '<pre.*?>': '\n{% codeblock %}\n',
+#   '</pre>': '\n{% endcodeblock %}\n',
+    ' ': ' ',
+    ' ': ' ',
+    '–': '-',
+    '–': '-',
+    '{{': '&#38;&#35;123;&#38;&#35;123;',
+    '}}': '&#38;&#35;125;&#38;&#35;125;',
+    '\[\/sourcecode\]': '</pre>', #'{% endcodeblock %}',
+    '\[sourcecode language=(.*?)\]': '<pre>', # '{% codeblock lang:\1 %}',
 #    '[python]': '{% codeblock lang:python %}',
 #    '[/python]': '{% endcodeblock %}',
 }
